--- a/index.css
+++ b/index.css
@@ -1,48 +1,196 @@
-* {
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-}
-
-#logo {
-    width: 200px;
-    border-radius: 50%;
-    padding: 10px 80px;
-}
-
-body {
-    font-family: sans-serif;
-}
-
-nav {
-    background: black;
-    height: 120px;
-    width: 100%;
-}
-
-nav ul {
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-}
-
-nav li {
-    display: inline-block;
-}
-
-nav a {
-    color: white;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin: 0px 8px;
-    padding: 7px 10px;
-    font-size: 18px;
-    border: 1px solid transparent;
-    border-radius: 5px;
-}
-
-#active,
-a:hover {
-    border: 1px solid orange;
-}
+    * {
+        padding: 0;
+        margin: 0;
+        text-decoration: none;
+        list-style: none;
+    }
+    
+    #logo {
+        line-height: 80px;
+        border-radius: 50%;
+        padding: 10px 50px;
+    }
+    
+    body {
+        font-family: sans-serif;
+        background-repeat: no-repeat;
+    }
+    
+    nav {
+        height: 100%;
+        width: 100%;
+        background: black;
+    }
+    
+    nav ul {
+        float: right;
+        line-height: 80px;
+        margin-right: 40px;
+    }
+    
+    nav li {
+        display: inline-block;
+    }
+    
+    nav a {
+        color: white;
+        font-weight: bold;
+        text-transform: uppercase;
+        margin: 0px 8px;
+        padding: 7px 10px;
+        font-size: 18px;
+        border: 1px solid transparent;
+        border-radius: 5px;
+    }
+    
+    #active,
+    a:hover {
+        border: 1px solid orange;
+    }
+    
+    #icon {
+        color: white;
+        font-size: 30px;
+        float: right;
+        margin-right: 40px;
+        line-height: 80px;
+        cursor: pointer;
+        display: none;
+    }
+    
+    @media(max-width:1040px) {
+        #logo {
+            width: 170px;
+            padding: 5px 70px;
+        }
+        nav a {
+            font-size: 16px;
+            padding: 5px 10px;
+            margin: 0px 4px;
+        }
+        nav ul {
+            margin-right: 20px;
+            line-height: 80px;
+        }
+        #active,
+        a:hover {
+            border: none;
+            color: white;
+        }
+        nav ul.show {
+            left: 0;
+        }
+    }
+    
+    @media(max-width:909px) {
+        #logo {
+            width: 140px;
+            padding: 10px 80px;
+            margin-left: -40px;
+        }
+        #icon {
+            display: block;
+        }
+        nav a {
+            color: white;
+            font-size: 18px;
+        }
+        nav ul {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            left: -100%;
+            top: 80px;
+            text-align: center;
+            background-color: rgb(70, 8, 44);
+            transition: all 1s;
+        }
+        nav li {
+            display: block;
+            margin: 50px 0px;
+            line-height: 30px;
+        }
+        #active,
+        a:hover {
+            color: orange;
+            border: none;
+        }
+        nav ul.show {
+            left: 0;
+        }
+    }
+    
+    @media(max-width:500px) {
+        #logo {
+            width: 100px;
+            padding: 5px 40px;
+        }
+        #icon {
+            display: block;
+        }
+        nav a {
+            color: white;
+        }
+        nav ul {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            left: -100%;
+            top: 40px;
+            text-align: center;
+            background-color: rgb(218, 111, 116);
+        }
+        nav li {
+            display: block;
+            line-height: 25px;
+            margin: 25px 0px;
+        }
+        #ative,
+        a:hover {
+            color: orange;
+            transition: 1s;
+        }
+    }
+    
+    #image_cake {
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 500px;
+        width: 100vw;
+    }
+    
+    #introduction {
+        margin-top: -100px;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        font-size: 35px;
+        margin-right: 32%;
+        color: orange;
+        text-decoration: underline;
+        font-weight: bold;
+    }
+    
+    #motto {
+        color: white;
+        font-weight: bold;
+        margin-top: 10px;
+        margin-right: 34%;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+    }
+    
+    #choose {
+        margin-left: 40px;
+        margin-top: 70px;
+        text-decoration: underline;
+        font-size: 30px;
+        color: rgb(63, 15, 15);
+    }
+    
+    #why {
+        font-size: 20px;
+        margin-top: 20px;
+        margin-left: 20px;
+    }
