--- a/index.css
+++ b/index.css
@@ -194,3 +194,11 @@
         margin-top: 20px;
         margin-left: 20px;
     }
+    
+    #btn_view {
+        color: white;
+        background-color: rgb(6, 6, 71);
+        padding: 10px;
+        margin-left: 30px;
+        border-radius: 7%;
+    }
