--- a/contact.css
+++ b/contact.css
@@ -1,142 +1,182 @@
-    * {
-        padding: 0;
-        margin: 0;
-    }
-    
-    body {
-        width: 100%;
-        height: 700px;
-        background-image: url(cup_cake.jpg);
-        background-repeat: no-repeat;
-    }
-    
-    #contact_head {
-        font-size: 30px;
-        text-align: center;
-        justify-content: center;
-        padding-top: 100px;
-        font-size: 70px;
-        color: rgb(30, 30, 73);
-        text-decoration: underline;
-    }
-    
-    #contact_sub {
-        text-align: center;
-        margin-top: 20px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: crimson;
-        font-size: 25px;
-        font-weight: bold;
-    }
-    
-    #contact_infor {
-        margin-top: 50px;
-        color: rgb(86, 51, 126);
-        font-weight: bold;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin-left: 90px;
-    }
-    
-    .form {
-        margin-left: 60px;
-    }
-    
-    #et_name {
-        height: 50px;
-        width: 550px;
-        font-size: 20px;
-        border-radius: 5px;
-    }
-    
-    #et_email {
-        height: 50px;
-        width: 550px;
-        border-radius: 5px;
-        font-size: 20px;
-    }
-    
-    #et_subject {
-        height: 50px;
-        width: 550px;
-        font-size: 20px;
-        border-radius: 5px;
-    }
-    
-    #et_message {
-        height: 350px;
-        width: 550px;
-        font-size: 20px;
-        border-radius: 5px;
-    }
-    
-    button {
-        background-color: rgb(46, 46, 128);
-        color: white;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 20px;
-        padding: 10px;
-        font-weight: bold;
-        border-radius: 10px;
-        margin-bottom: 40px;
-    }
-    
-    #contact_details {
-        margin-top: 50px;
-        color: rgb(86, 51, 126);
-        font-weight: bold;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin-left: 1200px;
-        margin-top: -725px;
-    }
-    
-    @media(max-width:1040px) {
-        #contact_details {
+        * {
+            padding: 0;
+            margin: 0;
+        }
+        
+        body {
+            width: 100%;
+            height: 700px;
+            background-image: url(cup_cake.jpg);
+            background-repeat: no-repeat;
+        }
+        
+        #contact_head {
+            font-size: 30px;
+            text-align: center;
+            justify-content: center;
+            padding-top: 100px;
+            font-size: 70px;
+            color: rgb(30, 30, 73);
+            text-decoration: underline;
+        }
+        
+        #contact_sub {
+            text-align: center;
+            margin-top: 20px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: crimson;
+            font-size: 25px;
+            font-weight: bold;
+        }
+        
+        #contact_infor {
+            margin-top: 50px;
             color: rgb(86, 51, 126);
             font-weight: bold;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin-left: 90px;
-            margin-top: 100px;
         }
-        .add {
-            font-size: 25px;
-            color: rgb(86, 51, 126);
+        
+        .form {
+            margin-left: 60px;
+        }
+        
+        #et_name {
+            height: 50px;
+            width: 550px;
+            font-size: 20px;
+            border-radius: 5px;
+        }
+        
+        #et_email {
+            height: 50px;
+            width: 550px;
+            border-radius: 5px;
+            font-size: 20px;
+        }
+        
+        #et_subject {
+            height: 50px;
+            width: 550px;
+            font-size: 20px;
+            border-radius: 5px;
+        }
+        
+        #et_message {
+            height: 350px;
+            width: 550px;
+            font-size: 20px;
+            border-radius: 5px;
+        }
+        
+        button {
+            background-color: rgb(46, 46, 128);
+            color: white;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: 20px;
+            padding: 10px;
             font-weight: bold;
+            border-radius: 10px;
+            margin-bottom: 40px;
         }
-    }
-    
-    @media(max-width:900px) {
+        
         #contact_details {
+            margin-top: 50px;
             color: rgb(86, 51, 126);
             font-weight: bold;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin-left: 90px;
-            margin-top: 100px;
+            margin-left: 1200px;
+            margin-top: -725px;
         }
+        
+        #details {
+            margin-top: 25px;
+            margin-left: 1200px;
+            background-color: white;
+            font-family: Arial, Helvetica, sans-serif;
+            border-radius: 10px;
+            padding: 7px;
+            margin-right: 15px;
+        }
+        
         .add {
-            font-size: 25px;
+            font-size: 20px;
             color: rgb(86, 51, 126);
             font-weight: bold;
+            color: orange;
+            text-decoration: underline;
         }
-    }
-    
-    #details {
-        margin-top: 25px;
-        margin-left: 1200px;
-        background-color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        border-radius: 10px;
-        padding: 7px;
-        margin-right: 15px;
-    }
-    
-    .add {
-        font-size: 20px;
-        color: rgb(86, 51, 126);
-        font-weight: bold;
-        color: orange;
-        text-decoration: underline;
-    }
-    
-    p {
-        font-weight: bold;
-    }
+        
+        p {
+            font-weight: bold;
+        }
+        
+        #email {
+            color: black;
+            font-weight: bold;
+        }
+        
+        @media(max-width:900px) {
+            #contact_details {
+                color: rgb(86, 51, 126);
+                font-weight: bold;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                margin-left: 80px;
+                margin-top: 100px;
+            }
+            #details {
+                margin-top: 25px;
+                margin-left: 80px;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                padding: 7px;
+                background: transparent;
+                margin-right: 10px;
+            }
+            p {
+                font-weight: bold;
+                color: orange;
+                font-size: 18px;
+            }
+            .add {
+                font-size: 20px;
+                color: rgb(86, 51, 126);
+                font-weight: bold;
+            }
+            .form {
+                margin-left: 20px;
+            }
+            #et_name {
+                height: 50px;
+                width: 500px;
+                font-size: 20px;
+                border-radius: 5px;
+            }
+            #et_email {
+                height: 50px;
+                width: 500px;
+                border-radius: 5px;
+                font-size: 20px;
+            }
+            #et_subject {
+                height: 50px;
+                width: 500px;
+                font-size: 20px;
+                border-radius: 5px;
+            }
+            #et_message {
+                height: 350px;
+                width: 500px;
+                font-size: 20px;
+                border-radius: 5px;
+            }
+            #email {
+                color: orange;
+                font-weight: bold;
+                font-size: 18px;
+            }
+        }
+        
+        nav {
+            height: 100px;
+            color: red;
+        }
